# did-sidekicks

./: CHANGELOG.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  build.rs  did_sidekicks.spdx.json  uniffi.toml
.github/codeql/: rust-codeql-config.yml
.github/workflows/: README.md  codeql-analyze.yml  pull-request-check.yml
src/: custom_jsonschema_keywords.rs  did_doc.rs  did_jsonschema.rs  did_method_parameters.rs  did_resolver.rs  did_sidekicks.udl  ed25519.rs  errors.rs  jcs_sha256_hasher.rs  lib.rs  multibase.rs  vc_data_integrity.rs
