[package]
name = "did_sidekicks"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A set of various Rust modules required while implementing either of did:tdw (v0.3) and did:webvh (v1.0) specifications"
authors = ["Frithjof Hoppe", "Vladica Stojic"]
homepage = "https://github.com/swiyu-admin-ch/did-sidekicks"
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_json_canonicalizer = "0.3.0"
chrono = { version = "0.4.41", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"
bs58 = { version = "0.5.1", features = ["check", "cb58"] }
thiserror = "2.0.12"
jsonschema = { version = "0.30.0" }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[dev-dependencies]
rstest = "0.25.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "did_sidekicks"
#path = "src/lib.rs" # `cargo readme` command insist on it

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
