[package]
name = "did_sidekicks"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A set of various Rust modules required while implementing either of did:tdw (v0.3) and did:webvh (v1.0) specifications"
authors = ["Vladica Stojic", "Marcel Pfeuti", "Frithjof Hoppe"]
homepage = "https://github.com/swiyu-admin-ch/did-sidekicks"
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_json_canonicalizer = "0.3.1"
chrono = { version = "0.4.42", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
sha2 = "0.10.9"
hex = "0.4.3"
bs58 = { version = "0.5.1", features = ["check", "cb58"] }
thiserror = "2.0.16"
jsonschema = { version = "0.33.0" }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[dev-dependencies]
rstest = "0.26.1"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "did_sidekicks"
#path = "src/lib.rs" # `cargo readme` command insist on it

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# TODO pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow"
question_mark_used = "allow"
module_name_repetitions = "allow"
missing_docs_in_private_items = "allow"
# The following "linting rule relaxations" were predominantly added due to warnings originated in the code generated by UniFFI
absolute_paths = "allow"
implicit_return = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
exhaustive_structs = "allow"
missing_const_for_fn = "allow"